--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CMS - DNHN</title>
     <!-- base:css -->
-    <link rel="stylesheet" href="../template/vendors/typicons/typicons.css">
-    <link rel="stylesheet" href="../template/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
 
-    <link rel="stylesheet" href="../template/css/vertical-layout-light/style.css">
+    <link rel="stylesheet" href="css/vertical-layout-light/style.css">
 </head>
 <body>
 <div class="container-scroller" id="bannerClose">
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="navbar-brand-wrapper d-flex justify-content-center">
             <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-                <a class="navbar-brand brand-logo" href="../template/index.html">CMS - DNHN</a>
+                <a class="navbar-brand brand-logo" href="index.html">CMS - DNHN</a>
                 <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                     <span class="typcn typcn-th-menu"></span>
                 </button>
@@ -27,7 +27,7 @@
             <ul class="navbar-nav mr-lg-2">
                 <li class="nav-item nav-profile dropdown">
                     <a class="nav-link" href="#" data-toggle="dropdown" id="profileDropdown">
-                        <img src="../template/images/dnhn.jpg" alt="profile"/>
+                        <img src="images/dnhn.jpg" alt="profile"/>
                         <span class="nav-profile-name">Doanh nghiệp hội nhập</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
@@ -83,13 +83,13 @@
                     </a>
                     <div class="collapse" id="ui-basic">
                         <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Thông
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Thông
                                 tin</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Ảnh
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Ảnh
                                 Slide</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Lợi
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Lợi
                                 thế cạnh tranh</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Cài
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Cài
                                 đặt hiển thị</a></li>
                         </ul>
                     </div>
@@ -103,9 +103,9 @@
                     </a>
                     <div class="collapse" id="form-elements">
                         <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Danh
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Danh
                                 sách</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Bài
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Bài
                                 viết của tôi</a></li>
                         </ul>
                     </div>
@@ -119,7 +119,7 @@
                     </a>
                     <div class="collapse" id="charts">
                         <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="../template/pages/tables/basic-table.html">Danh
+                            <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html">Danh
                                 sách sản phẩm</a></li>
                         </ul>
                     </div>
@@ -299,7 +299,7 @@
                                     <div class="row align-items-center h-100">
                                         <div class="col-md-4">
                                             <figure class="avatar mx-auto mb-4 mb-md-0">
-                                                <img src="../template/images/dnhn.jpg" alt="avatar">
+                                                <img src="images/dnhn.jpg" alt="avatar">
                                             </figure>
                                         </div>
                                         <div class="col-md-8">
@@ -542,16 +542,14 @@
 </div>
 <!-- container-scroller -->
 
-<script src="../template/vendors/js/vendor.bundle.base.js"></script>
+<script src="vendors/js/vendor.bundle.base.js"></script>
 
-<script src="../template/vendors/chart.js/Chart.min.js"></script>
+<script src="vendors/chart.js/Chart.min.js"></script>
 
-<script src="../template/js/off-canvas.js"></script>
-<script src="../template/js/hoverable-collapse.js"></script>
-<script src="../template/js/template.js"></script>
-<script src="../template/js/settings.js"></script>
-<script src="../template/js/todolist.js"></script>
-<script src="../template/js/dashboard.js"></script>
+<script src="js/off-canvas.js"></script>
+<script src="js/template.js"></script>
+<script src="js/settings.js"></script>
+<script src="js/dashboard.js"></script>
 </body>
 
 </html>
