--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CMS - DNHN</title>
     <!-- base:css -->
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
+    <!-- base:css -->
+    <link rel="stylesheet" href="../dashboard-dnhn/vendors/typicons/typicons.css">
+    <link rel="stylesheet" href="../dashboard-dnhn/vendors/css/vendor.bundle.base.css">
 
-    <link rel="stylesheet" href="css/vertical-layout-light/style.css">
+    <link rel="stylesheet" href="../dashboard-dnhn/css/vertical-layout-light/style.css">
 </head>
 <body>
 <div class="container-scroller" id="bannerClose">
